--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -290,7 +290,7 @@ tr.odd.priority-7 { background: #EDD8F2; }
 tr.odd.priority-7:hover, tr.even.priority-7:hover { background: #E3CFE8; }
 tr.even.priority-7, table.list tbody tr.even.priority-7:hover { color: #580D69; font-weight: normal; }
 tr.even.priority-7 { background: #EDDFF0; }
-tr.priority-7 a, tr.priority-7:hover a { color: #580D69 !important; }
+tr.priority-7 a, tr.priority-7:hover a { color: #580D69; }
 tr.odd.priority-7 td, tr.even.priority-7 td { border-color: transparent; }
 
 /*Immediately*/
@@ -299,7 +299,7 @@ tr.odd.priority-6 { background: #F2D5D5; }
 tr.odd.priority-6:hover, tr.even.priority-6:hover { background: #E8CCCC; }
 tr.even.priority-6, table.list tbody tr.even.priority-6:hover { color: #690000; font-weight: normal; }
 tr.even.priority-6 { background: #F0DDDD; }
-tr.priority-6 a, tr.priority-6:hover a { color: #690000 !important; }
+tr.priority-6 a, tr.priority-6:hover a { color: #690000; }
 tr.odd.priority-6 td, tr.even.priority-6 td { border-color: transparent; }
 
 /*High*/
@@ -308,7 +308,7 @@ tr.odd.priority-5 { background: #F2E9D5; }
 tr.odd.priority-5:hover, tr.even.priority-5:hover { background: #E8DFCC; }
 tr.even.priority-5, table.list tbody tr.even.priority-5:hover { color: #694900; }
 tr.even.priority-5 { background: #F0EBDD; }
-tr.priority-5 a { color: #694900 !important; }
+tr.priority-5 a { color: #694900; }
 tr.odd.priority-5 td, tr.even.priority-5 td { border-color: transparent; }
 
 /*Normal*/
@@ -317,7 +317,7 @@ tr.odd.priority-4 { background: #eee; }
 tr.odd.priority-4:hover, tr.even.priority-4:hover { background: #e5e5e5; }
 tr.even.priority-4, table.list tbody tr.even.priority-4:hover { color: #444; }
 tr.even.priority-4 { background: #fff }
-tr.priority-4 a { color: #444 !important; }
+tr.priority-4 a { color: #444; }
 tr.odd.priority-4 td, tr.even.priority-4 td { border-color: transparent; }
 
 /*Low*/
@@ -326,7 +326,7 @@ tr.odd.priority-3 { background: #D5E5F2; }
 tr.odd.priority-3:hover, tr.even.priority-3:hover { background: #CCDCE8; }
 tr.even.priority-3, table.list tbody tr.even.priority-3:hover { color: #003C69; }
 tr.even.priority-3 { background: #DDE8F0; }
-tr.priority-3 a { color: #003C69 !important; }
+tr.priority-3 a { color: #003C69; }
 tr.odd.priority-3 td, tr.even.priority-3 td { border-color: transparent; }
 
 /* Buttons */
