--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -8,7 +8,7 @@
 #header > h1 {
 	background: url(../images/logo_d.png) no-repeat 10px 20%;
 	padding: 5px 65px;
-	font-weight: normal;
+	font-weight: normal;t
 	color: #333;
 	font-size: 28px;
 }
@@ -870,6 +870,7 @@ input.autocomplete {
 }
 
 .toc {
-	background-color: #fff !important;
-	font-size: 1.0em !important;
+	background-color: #eee !important;
+	color: #222 !important;
+	font-size: 1.2em !important;
 }
