--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -869,8 +869,9 @@ input.autocomplete {
 	background-image: url(../images/clock.png) !important;
 }
 
-.toc {
+.toc * {
 	background-color: #eee !important;
 	color: #222 !important;
 	font-size: 1.2em !important;
 }
+
