--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -872,6 +872,6 @@ input.autocomplete {
 .toc, .toc li {
 	background-color: #eee !important;
 	color: #222 !important;
-	font-size: 1.2em !important;
+	font-size: 100% !important;
 }
 
