--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -882,7 +882,7 @@ input.autocomplete {
 }
 
 /* STYLISH */
-
+@import 'https://fonts.googleapis.com/css?family=Roboto';
 * {
     font-family: Roboto !important;
 }
